[main] create covid cases service and simply controller
on branch [main]
